@@ -20,7 +20,8 @@
  { type => 'pass', name => 'Confirm', short => 'pass2' },
 
  { type => 'sub', title => 'Miscellaneous options', short => 'misc' },
- { type => 'check', short => 'plist',  name => sprintf 'Allow other people to see my visual novel list (<a href="/u%d/list">/u%1$d/list</a>)', $d{user}  },
+ { type => 'check', short => 'plist',  name => sprintf
+   'Allow other people to see my visual novel list (<a href="/u%d/list">/u%1$d/list</a>) and wishlist (<a href="/u%1$d/wish">/u%1$d/wish</a>)', $d{user}  },
  { type => 'check', short => 'pign_nsfw', name => 'Disable warnings for images that are not safe for work.' },
 
  $d{adm} ? (
